logs/aioqueue.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aioamqp'...
Listing './lib/python3.5/site-packages/aioamqp-0.10.0.dist-info'...
Listing './lib/python3.5/site-packages/aioqueue'...
Compiling './lib/python3.5/site-packages/aioqueue/queue.py'...
***   File "./lib/python3.5/site-packages/aioqueue/queue.py", line 46
    logger.warn(f'Could not connect to amqp://{self.host}:{self.port}/. Trying again in {self.retry} second(s).')
                                                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aioqueue/response.py'...
***   File "./lib/python3.5/site-packages/aioqueue/response.py", line 20
    logger.info(f'Sending response to queue {routing_key} ({correlation_id})')
                                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aioqueue/task.py'...
***   File "./lib/python3.5/site-packages/aioqueue/task.py", line 23
    logger.debug(f'Packing data for task `{self.id}`: {self.data}')
                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aioqueue-0.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/u_msgpack_python-2.4.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
